# assignments

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
assignment_1/: README.md
life_expectancy/: Untitled.ipynb  cleaning.py  constants.py  enums.py  file_handlers.py  main.py  strategies.py
life_expectancy/tests/: conftest.py  test_cleaning.py  test_file_handlers.py  test_main.py  tests_enums.py
life_expectancy/tests/fixtures/: dummy_dataset.tsv  eu_life_expectancy_raw_fixture.tsv
